# ScrapeGoat

./: README.md
api/: .env.example  .gitignore  Makefile  README.md  pyrightconfig.json  requirements.txt
api/alembic/: env.py
api/alembic/versions/: f29a8570fd31_add_gen_random_uuid_default_to_id_.py
api/app/: main.py
api/app/modules/scraper/: models.py  routes.py  service.py
api/app/modules/users/: dao.py  models.py  routes.py  service.py
api/app/shared/: config.py
api/app/shared/data/: scraped_data.py  tree.py
api/app/shared/db/: mixins.py  session.py
api/app/shared/db/models/: folder.py  scrape_result.py  scraper_config.py  user.py  website.py
api/app/shared/models/: html.py  scrape-config.py  scrape.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  Configs.jsx  Home.jsx  Navbar.jsx  Selection.jsx  TreeNode.jsx  main.jsx
frontend/src/components/: Navbar.jsx
frontend/src/context/: UserContext.jsx
sdk/: .gitignore  Goatspeak.md  README.md  pyproject.toml  requirements.txt  setup.cfg
sdk/src/scrapegoat/: __init__.py  main.py
sdk/src/scrapegoat/classes/: __init__.py  conditions.py  goat.py  html_gardener.py  html_node.py  loom.py  main.py  sheepdog.py  shepherd.py  tapestry.py  thistle.py  thistle_interpreter.py
sdk/src/scrapegoat/classes/tapestry/: app.py  control_panel.py
sdk/src/scrapegoat/gui-styles/: tapestry.tcss
sdk/tests/: demo.ipynb
webscrape-toolkit/: pyproject.toml  setup.cfg
