[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapegoat"
version = "0.2.0"
description = "A toolkit of functions, classes, and utilities for creating web scrapers."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
  { name = "Arman Chinai", email = "chinaiarman@gmail.com" }
]
requires-python = ">=3.12"

dependencies = [
  "requests>=2.0",
  "beautifulsoup4>=4.12",
  "lxml"
]

[project.urls]
Homepage = "https://github.com/Langelozzi/ScrapeGoat"
Documentation = "https://github.com/Langelozzi/ScrapeGoat/blob/main/sdk/README.md"
Source = "https://github.com/Langelozzi/ScrapeGoat"
Issues = "https://github.com/Langelozzi/ScrapeGoat/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
