[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webscrape-toolkit"                   # Distribution name on PyPI
version = "0.1.0"                            # Start with 0.1.0 for new projects
description = "A toolkit of functions, classes, and utilities for creating web scrapers."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Arman Chinai", email = "chinaiarman@gmail.com" }
]
requires-python = ">=3.12"

# Install-time dependencies for users
dependencies = [
  "requests>=2.0",
  "beautifulsoup4>=4.12",
  "lxml"
]

[project.urls]
Homepage = "https://github.com/Langelozzi/ScrapeGoat/tree/main/webscrape-toolkit"
Documentation = "https://github.com/Langelozzi/ScrapeGoat/blob/main/webscrape-toolkit/README.md"
Source = "https://github.com/Langelozzi/ScrapeGoat/tree/main/webscrape-toolkit"
Issues = "https://github.com/Langelozzi/ScrapeGoat/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]